# wgpu_rt_lidar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: example_lidar.rs  maze.rs  multi_sensor.rs  nearest_neighbor.rs  nn.wgsl  rrt.rs  scratchpad.rs  shader.wgsl
src/: lib.rs  main.rs  shader.wgsl
src/depth_camera/: mod.rs  shader.pointcloud.wgsl  shader.wgsl
src/lidar/: mod.rs  shader.pointcloud.wgsl  shader.wgsl
src/utils/: mod.rs
src/utils/dense_voxel/: collision_check.wgsl  mod.rs  nn.wgsl  rrt.wgsl
src/utils/diff_render/: mod.rs
