[package]
name = "wgpu_rt_lidar"
version = "0.1.0"
edition = "2021"
description = "A hardware-accelerated ray tracing library for robotics and autonomy simulation, providing flexible LiDAR and depth camera models."

[dependencies]
bytemuck = "1.20.0"
bytemuck_derive = "1.8.0"
flume = "0.11.1"
glam = { version = "0.29.2", features = ["bytemuck"] }
tokio = {version ="1.41.1",  features = ["full"]}
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "440b33f" }
rerun = "0.22.0"
rand = "0.9.0"

[dev-dependencies]
ndarray= "*"
