[package]
name = "wgpu_rt_lidar"
version = "0.1.0"
edition = "2021"
description = "A hardware-accelerated ray tracing library for robotics and autonomy simulation, providing flexible LiDAR and depth camera models."

[dependencies]
bytemuck = "1.20.0"
bytemuck_derive = "1.8.0"
flume = "0.11.1"
glam = { version = "0.29.2", features = ["bytemuck"] }
tokio = {version ="1.41.1",  features = ["full"]}
wgpu = "26.0.*"
rerun = { version = "0.22.0", optional = true }
rand = "0.9.0"

[features]
default = []
visualization = ["rerun"]

[[example]]
name = "multi_sensor"
required-features = ["visualization"]

[[example]]
name = "rrt"
required-features = ["visualization"]

[dev-dependencies]
ndarray= "*"
